# http-requests

./: CMakeLists.txt  HTTPResponse.cpp  README.md  todo-list.md
fuckabout/: sockettest.cpp
include/: Connection.hpp  HTTPConnection.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HTTPSocket.hpp  URLParser.hpp
include/linux/: HTTPConnection.hpp
include/test/: TestListener.hpp
include/tests/: TestListener.hpp
src/: HTTPConnection.cpp  HTTPRequest.cpp  HTTPResponse.cpp  URLParser.cpp
src/linux/: HTTPConnection.cpp  HTTPSocket.cpp
tests/: HTTPSocket_test.cpp  URLParser_test.cpp
tests/linux/: TestListener.cpp
